# alaya

./: .envrc.example  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  test.yml
deploy/: Caddyfile  alaya.service  post-merge
migrations/: 003_create_books_table.sql  004_make_books_global.sql  005_add_filepath_to_books.sql  006_add_notes_to_books.sql  007_drop_isbn_from_books.sql
src/: auth.rs  books.rs  database.rs  gpt.rs  lib.rs  templates.rs
templates/: book_detail.html  book_edit.html  book_edit_chat.html  book_edit_notes.html  book_form.html  book_list.html  book_quick_add.html  change_password.html  dashboard.html  layout.html  login.html  new_book.html  profile.html  signup.html  style.css
