[package]
name = "alaya"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
askama = "0.14"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
